# gtfs-server

./: .dockerignore  .env.production  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  README.md  aliases.js  build.rs  docker-compose.yml  gulpfile.js  index.html  package.json  search-index.js
doc/gtfs_server/: index.html  sidebar-items.js
doc/gtfs_server/models/: sidebar-items.js
doc/gtfs_server/routes/: RoutesHandler.t.html
doc/src/gtfs_server/: main.rs.html
gtfs_server/: all.html  fn.create_pool.html  fn.main.html  fn.start_server.html  index.html  search-index.js  sidebar-items.js  start_server.v.html  static.static_rocket_route_info_for_static_css.html  static.static_rocket_route_info_for_static_js.html  static_rocket_route_info_for_static_css.v.html  static_rocket_route_info_for_static_js.v.html
gtfs_server/gtfs_server/routes/: index.html
gtfs_server/importer/: create_tables.v.html  download_feed.v.html  fn.create_tables.html  fn.download_feed.html  fn.generate_uid.html  fn.parse_agency.html  fn.parse_calendar.html  fn.parse_feed.html  fn.parse_routes.html  fn.parse_stop_times.html  fn.parse_stops.html  fn.parse_trips.html  generate_uid.v.html  index.html  parse_agency.v.html  parse_calendar.v.html  parse_feed.v.html  parse_routes.v.html  parse_stop_times.v.html  parse_stops.v.html  parse_trips.v.html  sidebar-items.js  struct.NaiveDate.html  struct.NaiveTime.html  trait.Deserializer.html
gtfs_server/models/: index.html  sidebar-items.js
gtfs_server/models/agency/: index.html  (+7 more)
gtfs_server/routes/: index.html  sidebar-items.js  struct.RoutesHandler.html
gtfs_server/test/: index.html  sidebar-items.js
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: main.rs
src/gtfs_server/: main.rs.html
src/importer/: mod.rs
src/models/: agency.rs  boundingbox.rs  coordinate.rs  dropoff.rs  mod.rs  pickup.rs  query.rs  route.rs  stop.rs  time.rs  trip.rs
src/routes/: mod.rs
src/test/: mod.rs
(+729 files in other folders)
