[package]
name = "prj"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]

[dependencies]
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
postgres = { version= "0.15", features = ["with-chrono"] }
csv = "1.0.0-beta.5"
rust-crypto = "0.2.36"
serde="1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
regex = "0.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
num-traits = "0.2"
num-derive = "0.2"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]