[package]
name = "gtfs-server"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
postgres = { version= "0.15", features = ["with-chrono"] }
csv = "1.0.0-beta.5"
rust-crypto = "0.2.36"
serde="1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "0.2"
rocket = "*"
rocket_codegen = "*"
num-traits = "0.2"
num-derive = "0.2"
reqwest = "0.8.5"
tempfile = "3"
zip = "0.3"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]