[package]
name = "gtfs-server"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
r2d2 = "0.8.5"
r2d2_postgres = "0.15.0-rc.1"
postgres = { version = "0.16.0-rc.2"}
csv = "1.1.1"
rust-crypto = "0.2.36"
serde="1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.2.1"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
runtime-fmt = { git = "https://github.com/ludios/runtime-fmt"}
num-traits = "0.2"
num-derive = "0.2"
reqwest = "0.9.21"
tempfile = "3"
time = "0.1.42"
zip = "0.3"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
